Implement home page mobile responsive

--- a/Home/index.html
+++ b/Home/index.html
@@ -36,7 +36,7 @@
         <div class="main-menu text-sm">
             <ul>
                 <li>
-                    <a href="#">Men's Outerwear</a>
+                    <a href="../Men_Outwear/index.html">Men's Outerwear</a>
                 </li>
                 <li>
                     <a href="#">Ladies Outerwear</a>
