Add media query to make mobile responsive

--- a/Home/index.html
+++ b/Home/index.html
@@ -19,6 +19,19 @@
 
     <!-- Heading -->
     <header class="header">
+        <nav>
+            <div class="hamburger" id="hamburger">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+            <ul class="links" id="navLinks">
+                <li><a href="#">Men's Outerwear</a></li>
+                <li><a href="#">Ladies Outerwear</a></li>
+                <li><a href="#">Men's T-Shirts</a></li>
+                <li><a href="#">Ladies T-Shirts</a></li>
+            </ul>
+        </nav>
         <div class="heading">
             <a href="../Home/index.html" class="shop">
                 <h1 class="text-lg">SHOP</h1>
