Update cart html layout

--- a/Cart/index.html
+++ b/Cart/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-     <!-- Heading -->
-     <header class="header">
+    <!-- Heading -->
+    <header class="header">
         <div class="heading">
             <a href="../Home/index.html" class="shop">
                 <h1 class="text-lg">SHOP</h1>
@@ -36,32 +36,38 @@
         <div class="cart-item text-sm">
             <img src="../images/men_outwears/10-15068B.jpg" alt="Men's Tech Shell Full-Zip">
             <div class="item-details">
-                <p class="item-name">Men's Tech Shell Full-Zip</p>
-                <p>
-                    Qty: 
-                    <select>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                        <option value="11">11</option>
-                        <option value="12">12</option>
-                    </select>
-                </p>
-                <p>Size: M</p>
-                <p class="item-price">$50.20</p>
+                <div class="item-name">
+                    <p class="item-name">Men's Tech Shell Full-Zip</p>
+                </div>
+                <div class="product-details">
+                    <p>
+                        Qty:
+                        <select>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                            <option value="11">11</option>
+                            <option value="12">12</option>
+                        </select>
+                    </p>
+                    <p>Size: M</p>
+                    <p class="item-price">$50.20</p>
+                </div>
+                
             </div>
             <button class="remove-btn">X</button>
         </div>
         <div class="total">
             <p>Total: <span>$50.20</span></p>
-            <button class="checkout-btn">CHECKOUT</button>
+            <a href="../Checkout/index.html"><button class="checkout-btn">CHECKOUT</button></a>
+
         </div>
     </section>
 </body>
