Modify and remove unnecessery div

--- a/Men_Outwear/index.html
+++ b/Men_Outwear/index.html
@@ -24,7 +24,7 @@
             </a>
         </div>
         <div class="cart-icon">
-            <a href="#" class="btn">
+            <a href="../Cart/index.html" class="btn">
                 <i class="fa-solid fa-cart-shopping" style="color: black;"></i>
             </a>
         </div>
@@ -64,137 +64,186 @@
         </div>
     </section>
 
-    <section class="men_outwears">
-        <div class="container">
-            <div class="item">
-                <a href="../Single-Item/index.html" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-            
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-
-            <div class="item">
-                <a href="" >
-                    <img src="../images/men_outwears/10-15068B.jpg" alt="">
-                </a>
-                <h4>Men's Tech Shell Full-Zip</h4>
-                <p class="text-sm price">$50.20</p>
-            </div>
-        </div>
-    </section>
+    <ul class="grid">
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears/10-15068B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">Men's Tech Shell Full-Zip </div>
+                    <span class="price">$50.99</span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears//10-14154B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">Anvil L/S Crew Neck - Grey</div>
+                    <span class="price">$50.99</span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears//10-14157B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">Green Flex Fleece Zip Hoodie</div>
+                    <span class="price">$50.99</span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears/10-15041B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">Android Nylon Packable Jacket </div>
+                    <span class="price">$50.99</span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears/10-14133B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">YouTube Ultimate Hooded Sweatshirt </div>
+                    <span class="price">$50.99</span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears/10-14160B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">Grey Heather Fleece Zip Hoodie </div>
+                    <span class="price">$50.99</span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears/10-14153B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">Vastrm Hoodie</div>
+                    <span class="price">$200</span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears/10-14158B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">Recycled Plastic Bottle Hoodie - Green</div>
+                    <span class="price">$50.99</span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears/10-14152B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">Rowan Pullover Hood</div>
+                    <span class="price">$50.99</span>
+                </div>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears/10-14155B.jpg " alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">Men's Voyage Fleece Jacket</div>
+                    <span class="price">$48.00</span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears/10-14159B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">Eco-Jersey Chrome Zip Up Hoodie </div>
+                    <span class="price">$37.75</span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears/10-14146B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">Android Colorblock Hooded Pullover</div>
+                    <span class="price">$50.02</span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears/10-14216B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">Tri-blend Full-Zip Hoodie</div>
+                    <span class="price">$52.20</span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears/10-14215B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">Fleece Full-Zip Hoodie</div>
+                    <span class="price">$45.65</span>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears/10-14217B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">Jacquard-Knit Full-Zip Fleece</div>
+                    <span class="price">$74.90</span>
+                </div>
+                </div>
+            </a>
+        </li>
+        <li>
+            <a href="../Single-Item/index.html">
+                <div class="item">
+                    <div class="item-image">
+                        <img src="../images/men_outwears/10-15103B.jpg" alt="Item Title" class="shop-image">
+                    </div>
+                    <div class="title">YouTube Unisex Flex Fleece Zip Hoodie</div>
+                    <span class="price">$45.25</span>
+                </div>
+            </a>
+        </li>
+    </ul>
 </body>
 
 </html>
