Remove unnecessery comments

--- a/Single-Item/index.html
+++ b/Single-Item/index.html
@@ -51,59 +51,61 @@
     </nav>
 
     <section class="description">
-        <div class="img-description-grid">
-            <div class="item-img">
-                <img src="../images/men_outwears/10-15068B.jpg" alt="">
+
+        <div class="item-img">
+            <img class="image" src="../images/men_outwears/10-15068B.jpg" alt="">
+        </div>
+        <div class="item-information">
+            <h2 class="item-name">Men's Tech Shell Full-Zip</h2>
+            <p class="price">$50.20</p>
+            <div class="dropdown-container">
+                <div class="dropdown-wrapper">
+                    <label for="size">Size</label>
+                    <select id="size" class="custom-select">
+                        <option value="S">S</option>
+                        <option value="M" selected>M</option>
+                        <option value="L">L</option>
+                        <option value="XL">XL</option>
+                    </select>
+                </div>
+
+                <div class="dropdown-wrapper">
+                    <label for="quantity">Quantity</label>
+                    <select id="quantity" class="custom-select">
+                        <option value="1" selected>1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                    </select>
+                </div>
             </div>
-            <div class="item-information">
-                <h2 class="item-name">Men's Tech Shell Full-Zip</h2>
-                <p class="price">$50.20</p>
-                <div class="dropdown-container">
-                    <div class="dropdown-wrapper">
-                        <label for="size">Size</label>
-                        <select id="size" class="custom-select">
-                            <option value="S">S</option>
-                            <option value="M" selected>M</option>
-                            <option value="L">L</option>
-                            <option value="XL">XL</option>
-                        </select>
-                    </div>
 
-                    <div class="dropdown-wrapper">
-                        <label for="quantity">Quantity</label>
-                        <select id="quantity" class="custom-select">
-                            <option value="1" selected>1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                        </select>
-                    </div>
+            <div class="item-description">
+                <h4>Description</h4>
+                <p>A versatile full-zip that you can wear all day long and even to the gym.
+                    This technical shell features moisture-wicking fabric, added stretch and a
+                    hidden pocket for your smartphone or media player. </p>
+                <p>Features:</p>
+                <div class="features">
+                    <ul>
+                        <li>100% polyester.</li>
+                        <li>Smooth, technical front with textured mesh back.</li>
+                        <li>Drawstring bottom for adjustable fit.</li>
+                        <li>Raglan sleeves.</li>
+                        <li>Available in forest green with the white Google logo embroidered at left chest.</li>
+                    </ul>
                 </div>
-
-                <div class="item-description">
-                    <h4>Description</h4>
-                    <p>A versatile full-zip that you can wear all day long and even to the gym.
-                        This technical shell features moisture-wicking fabric, added stretch and a
-                        hidden pocket for your smartphone or media player. </p>
-                    <p>Features:</p>
-                    <div class="features">
-                        <ul>
-                            <li>100% polyester.</li>
-                            <li>Smooth, technical front with textured mesh back.</li>
-                            <li>Drawstring bottom for adjustable fit.</li>
-                            <li>Raglan sleeves.</li>
-                            <li>Available in forest green with the white Google logo embroidered at left chest.</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="btn-add">
-                    <button class="btn">ADD TO CART</button>
-                </div>
-
             </div>
+
+            <a href="../Cart/index.html">
+                <button class="btn">ADD TO CART</button>
+            </a>
+                
+            
 
         </div>
+
+
     </section>
 </body>
 
