Add more months and years in expiry

--- a/Checkout/index.html
+++ b/Checkout/index.html
@@ -24,7 +24,7 @@
             </a>
         </div>
         <div class="cart-icon">
-            <a href="#" class="btn">
+            <a href="../Cart/index.html" class="btn">
                 <i class="fa-solid fa-cart-shopping" style="color: black;"></i>
             </a>
         </div>
@@ -67,9 +67,26 @@
                     <div class="date">
                         <select>
                             <option>Jan</option>
+                            <option>Feb</option>
+                            <option>March</option>
+                            <option>Apr</option>
+                            <option>May</option>
+                            <option>June</option>
+                            <option>July</option>
+                            <option>Aug</option>
+                            <option>Sept</option>
+                            <option>Oct</option>
+                            <option>Nov</option>
+                            <option>Dec</option>
                         </select>
                         <select>
                             <option>2024</option>
+                            <option>2025</option>
+                            <option>2026</option>
+                            <option>2027</option>
+                            <option>2028</option>
+                            <option>2029</option>
+                            <option>2030</option>
                             
                         </select>
                         <input type="text" placeholder="CVV" >
