Fix : position of button

--- a/Home/index.html
+++ b/Home/index.html
@@ -25,12 +25,12 @@
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
-            <ul class="links" id="navLinks">
+            <!-- <ul class="links" id="navLinks">
                 <li><a href="#">Men's Outerwear</a></li>
                 <li><a href="#">Ladies Outerwear</a></li>
                 <li><a href="#">Men's T-Shirts</a></li>
                 <li><a href="#">Ladies T-Shirts</a></li>
-            </ul>
+            </ul> -->
         </nav>
         <div class="heading">
             <a href="../Home/index.html" class="shop">
@@ -38,7 +38,7 @@
             </a>
         </div>
         <div class="cart-icon">
-            <a href="#" class="btn">
+            <a href="../Cart/index.html" class="btn">
                 <i class="fa-solid fa-cart-shopping" style="color: black;"></i>
             </a>
         </div>
