Fix : Fix the position of bottom images for desktop view

--- a/Home/index.html
+++ b/Home/index.html
@@ -25,7 +25,7 @@
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
-           
+
         </nav>
         <div class="heading">
             <a href="../Home/index.html" class="shop">
@@ -33,7 +33,7 @@
             </a>
         </div>
         <div class="cart-icon">
-            <a href="../Cart/index.html" class="btn">
+            <a href="../Cart/index.html" class="">
                 <i class="fa-solid fa-cart-shopping" style="color: black;"></i>
             </a>
         </div>
@@ -61,34 +61,29 @@
 
     <!-- Hero -->
     <section class="hero">
-        <div class="container">
-            <!-- Men's Outwears Cart -->
+        <div class="cart">
+            <img src="../images/men_outwears/mens_outerwear.jpg" alt="Men's Outwears">
+            <p class="text-md">Men's Outwears</p>
+            <button class="btn" type="button">SHOP NOW</button>
+        </div>
+
+        <div class="cart">
+            <img src="../images/ladies_outerwear.jpg" alt="Men's Outwears">
+            <p class="text-md">Ladies Outwears</p>
+            <button class="btn" type="button">SHOP NOW</button>
+        </div>
+
+        <div class="men-ladies-tshirts">
             <div class="cart">
-                <img src="../images/men_outwears/mens_outerwear.jpg" alt="Men's Outwears">
-                <p class="text-md">Men's Outwears</p>
-                <button class="btn" type="button">SHOP NOW</button>
-            </div>
-            <!-- Ladies Outwers cart -->
-            <div class="cart">
-                <img src="../images/ladies_outerwear.jpg" alt="Men's Outwears">
+                <img class="img" src="../images/mens_tshirts.jpg" alt="Men's Shirts">
                 <p class="text-md">Ladies Outwears</p>
                 <button class="btn" type="button">SHOP NOW</button>
             </div>
-            <!-- Men's T-Shirts and Ladies T-Shirts Carts -->
-            <div class="men-ladies-tshirts">
-                <div class="men-cart">
-                    <img class="img" src="../images/mens_tshirts.jpg" alt="Men's Shirts">
-                    <p class="text-md">Ladies Outwears</p>
-                    <button class="btn" type="button">SHOP NOW</button>
-                </div>
-                <div class="ladies-cart">
-                    <img class="img" src="../images/ladies_tshirts.jpg" alt="ladies_tshirts">
-                    <p class="text-md">Ladies Outwears</p>
-                    <button class="btn" type="button">SHOP NOW</button>
-                </div>
+            <div class="cart">
+                <img class="img" src="../images/ladies_tshirts.jpg" alt="ladies_tshirts">
+                <p class="text-md">Ladies Outwears</p>
+                <button class="btn" type="button">SHOP NOW</button>
             </div>
-
-
         </div>
     </section>
 
