Fix : Fix the cart design

--- a/Cart/index.html
+++ b/Cart/index.html
@@ -40,29 +40,21 @@
                     <p class="item-name">Men's Tech Shell Full-Zip</p>
                 </div>
                 <div class="product-details">
-                    <p>
-                        Qty:
-                        <select>
+                    <div class="quantity">
+                        <label for="quantitySelect">Qty:</label>
+                        <select id="quantitySelect" aria-label="Change quantity">
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8">8</option>
-                            <option value="9">9</option>
-                            <option value="10">10</option>
-                            <option value="11">11</option>
-                            <option value="12">12</option>
                         </select>
-                    </p>
-                    <p>Size: M</p>
-                    <p class="item-price">$50.20</p>
+                    </div>
+                    <div class="size">Size: <span>M</span></div>
+                    <div class="price">$50.00</div>
                 </div>
-                
+                <button class="remove-btn">X</button>
             </div>
-            <button class="remove-btn">X</button>
+            
         </div>
         <div class="total">
             <p>Total: <span>$50.20</span></p>
