Remove background of cart-icon

--- a/Home/index.html
+++ b/Home/index.html
@@ -33,7 +33,7 @@
             </a>
         </div>
         <div class="cart-icon">
-            <a href="../Cart/index.html" class="">
+            <a href="../Cart/index.html">
                 <i class="fa-solid fa-cart-shopping" style="color: black;"></i>
             </a>
         </div>
