--- a/Men_Outwear/index.html
+++ b/Men_Outwear/index.html
@@ -24,7 +24,7 @@
             </a>
         </div>
         <div class="cart-icon">
-            <a href="../Cart/index.html" class="btn">
+            <a href="../Cart/index.html">
                 <i class="fa-solid fa-cart-shopping" style="color: black;"></i>
             </a>
         </div>
