Design add to cart button

--- a/Single-Item/index.html
+++ b/Single-Item/index.html
@@ -61,7 +61,7 @@
             <div class="dropdown-container">
                 <div class="dropdown-wrapper">
                     <label for="size">Size</label>
-                    <select id="size" class="custom-select">
+                    <select id="size">
                         <option value="S">S</option>
                         <option value="M" selected>M</option>
                         <option value="L">L</option>
@@ -71,7 +71,7 @@
 
                 <div class="dropdown-wrapper">
                     <label for="quantity">Quantity</label>
-                    <select id="quantity" class="custom-select">
+                    <select id="quantity">
                         <option value="1" selected>1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
