Design checkout button for mobile view

--- a/Checkout/index.html
+++ b/Checkout/index.html
@@ -32,7 +32,7 @@
 
     <section class="checkout-info">
         <h2>Checkout</h2>
-        <p>Shop is a demo app - form data will not be sent</p>
+        
     </section>
 
     <div class="container">
@@ -40,18 +40,18 @@
             <section class="form-section">
                 <form>
                     <div>
-                        <legend>Account Information</legend>
+                        <h3>Account Information</h3>
                         <input type="email" placeholder="Email" >
                         <input type="tel" placeholder="Phone Number">
                     </div>
                     <div>
-                        <legend>Shipping Address</legend>
+                        <h3>Shipping Address</h3>
                         <input type="text" placeholder="Address">
                         <input type="text" placeholder="City">
                         <input type="text" placeholder="State/Province">
                         <select>
+                            <option>India</option>
                             <option>United States</option>
-                            
                         </select>
                         <input type="text" placeholder="Zip/Postal Code">
                     </div>
@@ -64,7 +64,7 @@
                 <input type="text" placeholder="Card Number">
                 <div class="expiry">
                     <p>Expiry</p>
-                    <div class="date">
+                    <div class="expiry-date">
                         <select>
                             <option>Jan</option>
                             <option>Feb</option>
