remove unwanted comments

--- a/Men_Outwear/index.html
+++ b/Men_Outwear/index.html
@@ -64,8 +64,8 @@
         </div>
     </section>
 
-    <ul class="grid">
-        <li>
+    <section class="grid">
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -75,8 +75,8 @@
                     <span class="price">$50.99</span>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -86,8 +86,8 @@
                     <span class="price">$50.99</span>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -97,8 +97,8 @@
                     <span class="price">$50.99</span>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -108,8 +108,8 @@
                     <span class="price">$50.99</span>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -119,8 +119,8 @@
                     <span class="price">$50.99</span>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -130,8 +130,8 @@
                     <span class="price">$50.99</span>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -141,8 +141,8 @@
                     <span class="price">$200</span>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -152,8 +152,8 @@
                     <span class="price">$50.99</span>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -164,8 +164,8 @@
                 </div>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -175,8 +175,8 @@
                     <span class="price">$48.00</span>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -186,8 +186,8 @@
                     <span class="price">$37.75</span>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -197,8 +197,8 @@
                     <span class="price">$50.02</span>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -208,8 +208,8 @@
                     <span class="price">$52.20</span>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -219,8 +219,8 @@
                     <span class="price">$45.65</span>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -231,8 +231,8 @@
                 </div>
                 </div>
             </a>
-        </li>
-        <li>
+        </div>
+        <div>
             <a href="../Single-Item/index.html">
                 <div class="item">
                     <div class="item-image">
@@ -242,8 +242,8 @@
                     <span class="price">$45.25</span>
                 </div>
             </a>
-        </li>
-    </ul>
+        </div>
+    </section>
 </body>
 
 </html>
