Change font size and color

--- a/Men_Outwear/index.html
+++ b/Men_Outwear/index.html
@@ -57,8 +57,11 @@
                 <a href="">
                     <img src="../images/men_outwears/mens_outerwear.jpg" alt="Men's Outwears">
                 </a>
-                
-                <p class="text-md">Men's Outwears</p>
+                <div class="cart-heading">
+                    <p class="text-md">Men's Outwears</p>
+                    <span>(16 items)</span>
+                </div>
+
                 <button class="btn" type="button">SHOP NOW</button>
             </div>
         </div>
@@ -162,8 +165,8 @@
                     <div class="title">Rowan Pullover Hood</div>
                     <span class="price">$50.99</span>
                 </div>
-                </div>
-            </a>
+        </div>
+        </a>
         </div>
         <div>
             <a href="../Single-Item/index.html">
@@ -229,8 +232,8 @@
                     <div class="title">Jacquard-Knit Full-Zip Fleece</div>
                     <span class="price">$74.90</span>
                 </div>
-                </div>
-            </a>
+        </div>
+        </a>
         </div>
         <div>
             <a href="../Single-Item/index.html">
